flexsdk/modules/asc/test/compiler/e4x/XML/TagNotClosedErr.err

[Compiler] Error #1104: invalid xml name
   TagNotClosedErr.as, Ln 36, Col 1: 
   </blah>
   ^

[Compiler] Error #1084: Syntax error: expecting xmltagendend before end of program.
   TagNotClosedErr.as, Ln 41, Col 1: 

[Compiler] Error #1100: Syntax error: XML does not have matching begin and end tags.
   TagNotClosedErr.as, Ln 41, Col 1: 

3 errors found
